--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,19 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+main{
+    display: flex;
+}
+
+#formulario, #items{
+    width:200px;
+}
+
+#items{
+    min-height: 300px;
+}
+
+section > h1{
+    margin-top: 0;
+}
